ELS Code/main/default/objects/Contact_Sources__c/Contact_Sources__c.object-meta.xml
<CustomObject>
    <description>Junction object between Contact and Sources objects.</description>
    <label>Activities and Interests</label>
    <nameField>
        <displayFormat>CS-{00000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities and Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>