ELS Code/main/default/objects/Contact_Sources__c/fields/CampUSA_Property_Brand__c.field-meta.xml
<CustomField>
    <fullName>CampUSA_Property_Brand__c</fullName>
    <label>CampUSA Property Brand</label>
    <type>TextArea</type>
</CustomField>