ELS Code/main/default/objects/Contact_Sources__c/fields/CampUSA_Property_Name__c.field-meta.xml
<CustomField>
    <fullName>CampUSA_Property_Name__c</fullName>
    <label>CampUSA Property Name</label>
    <type>TextArea</type>
</CustomField>