ELS Code/main/default/objects/Contact_Sources__c/fields/CampUSA_Property_State__c.field-meta.xml
<CustomField>
    <fullName>CampUSA_Property_State__c</fullName>
    <label>CampUSA Property State</label>
    <type>TextArea</type>
</CustomField>