ELS Code/main/default/objects/Contact_Sources__c/fields/Contact_Email2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email2__c</fullName>
    <formula>Contact_Id__r.Email_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email2</label>
    <type>Text</type>
</CustomField>