ELS Code/main/default/objects/Contact_Sources__c/fields/Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Address__c</fullName>
    <formula>Contact_Id__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email Address</label>
    <type>Text</type>
</CustomField>