ELS Code/main/default/objects/Contact_Sources__c/fields/Contact_FLAS2__c.field-meta.xml
<CustomField>
    <fullName>Contact_FLAS2__c</fullName>
    <formula>Contact_Id__r.FLAS_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact FLAS2</label>
    <type>Text</type>
</CustomField>