ELS Code/main/default/objects/Contact_Sources__c/fields/Contact_FLAS__c.field-meta.xml
<CustomField>
    <fullName>Contact_FLAS__c</fullName>
    <formula>Contact_Id__r.FLAS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact FLAS</label>
    <type>Text</type>
</CustomField>