ELS Code/main/default/objects/Contact_Sources__c/fields/Contact_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_18__c</fullName>
    <description>18 character Contact record ID</description>
    <formula>Contact_Id__r.Contact_ID_18__c</formula>
    <label>Contact ID (18)</label>
    <type>Text</type>
</CustomField>