ELS Code/main/default/objects/Contact_Sources__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contact_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>