ELS Code/main/default/objects/Contact_Sources__c/fields/Contact_Last_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Created_Date__c</fullName>
    <formula>Contact_Id__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Last Created Date</label>
    <type>DateTime</type>
</CustomField>