ELS Code/main/default/objects/Contact_Sources__c/fields/Contact_LAZ2__c.field-meta.xml
<CustomField>
    <fullName>Contact_LAZ2__c</fullName>
    <formula>Contact_Id__r.LAZ_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact LAZ2</label>
    <type>Text</type>
</CustomField>