ELS Code/main/default/objects/Contact_Sources__c/fields/Contact_LAZ__c.field-meta.xml
<CustomField>
    <fullName>Contact_LAZ__c</fullName>
    <formula>Contact_Id__r.LAZ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact LAZ</label>
    <type>Text</type>
</CustomField>