ELS Code/main/default/objects/Contact_Sources__c/fields/Contact_PF__c.field-meta.xml
<CustomField>
    <fullName>Contact_PF__c</fullName>
    <formula>Contact_Id__r.PF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact PF</label>
    <type>Text</type>
</CustomField>