ELS Code/main/default/objects/Contact_Sources__c/fields/Contact_PL__c.field-meta.xml
<CustomField>
    <fullName>Contact_PL__c</fullName>
    <formula>Contact_Id__r.PL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact PL</label>
    <type>Text</type>
</CustomField>