ELS Code/main/default/objects/Contact_Sources__c/fields/Dealer_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Rep_Name__c</fullName>
    <label>Dealer Rep Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>