ELS Code/main/default/objects/Contact_Sources__c/fields/DG_Delete_Tradeshow__c.field-meta.xml
<CustomField>
    <fullName>DG_Delete_Tradeshow__c</fullName>
    <formula>If(AND((YEAR(    TODAY()    ) *12 + MONTH(  TODAY() )) - (YEAR( Add_Date__c ) *12 + MONTH( Add_Date__c)) &gt; 36, DG_Is_Tradeshow__c ),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DG_Delete_TradeShow</label>
    <type>Checkbox</type>
</CustomField>