ELS Code/main/default/objects/Contact_Sources__c/fields/DG_Delete_Web_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>DG_Delete_Web_Social_Media__c</fullName>
    <formula>If(AND((YEAR( TODAY() ) *12 + MONTH( TODAY() )) - (YEAR( Add_Date__c ) *12 + MONTH( Add_Date__c)) &gt; 18,  DG_Is_Web_Or_Social_Media__c  ),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DG_Delete_Web_Social_Media</label>
    <type>Checkbox</type>
</CustomField>