ELS Code/main/default/objects/Contact_Sources__c/fields/DG_Is_Tradeshow__c.field-meta.xml
<CustomField>
    <fullName>DG_Is_Tradeshow__c</fullName>
    <formula>IF(  ISPICKVAL(Sources_ID__r.Source_Type__c, &apos;TradeShow&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DG_Is_Tradeshow</label>
    <type>Checkbox</type>
</CustomField>