ELS Code/main/default/objects/Contact_Sources__c/fields/DG_Is_Web_Or_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>DG_Is_Web_Or_Social_Media__c</fullName>
    <formula>OR( ISPICKVAL(Sources_ID__r.Source_Type__c, &apos;Web&apos;)  , ISPICKVAL(Sources_ID__r.Source_Type__c, &apos;Social Media&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DG_Is_Web_Or_Social_Media</label>
    <type>Checkbox</type>
</CustomField>