ELS Code/main/default/objects/Contact_Sources__c/fields/File_From__c.field-meta.xml
<CustomField>
    <fullName>File_From__c</fullName>
    <description>This indicates that from which file this activity has been created.</description>
    <label>File From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>