ELS Code/main/default/objects/Contact_Sources__c/fields/Guest_Number__c.field-meta.xml
<CustomField>
    <fullName>Guest_Number__c</fullName>
    <label>Guest Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>