ELS Code/main/default/objects/Contact_Sources__c/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <label>Member ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>