ELS Code/main/default/objects/Contact_Sources__c/fields/Membership_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Membership_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities_and_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>