ELS Code/main/default/objects/Contact_Sources__c/fields/Membership_Specialist_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Membership_Specialist_s_Email__c</fullName>
    <formula>Membership_Specialist__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Specialist&apos;s Email</label>
    <type>Text</type>
</CustomField>