ELS Code/main/default/objects/Contact_Sources__c/fields/Preferred_Hookups__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Hookups__c</fullName>
    <label>Preferred Hookups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>