ELS Code/main/default/objects/Contact_Sources__c/fields/Resort_Interested__c.field-meta.xml
<CustomField>
    <fullName>Resort_Interested__c</fullName>
    <label>Resort Interested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>