ELS Code/main/default/objects/Contact_Sources__c/fields/Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_ID__c</fullName>
    <formula>Sources_ID__r.Source_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source ID</label>
    <type>Text</type>
</CustomField>