ELS Code/main/default/objects/Contact_Sources__c/fields/Source_ID_New__c.field-meta.xml
<CustomField>
    <fullName>Source_ID_New__c</fullName>
    <label>Source ID N</label>
    <length>50</length>
    <type>Text</type>
</CustomField>