ELS Code/main/default/objects/Contact_Sources__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <formula>Text (Sources_ID__r.Source_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Type</label>
    <type>Text</type>
</CustomField>