ELS Code/main/default/objects/Contact_Sources__c/fields/Sources_ID__c.field-meta.xml
<CustomField>
    <fullName>Sources_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source ID</label>
    <referenceTo>Sources__c</referenceTo>
    <relationshipName>Contact_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>