ELS Code/main/default/objects/Contact_Sources__c/fields/Sub_Id__c.field-meta.xml
<CustomField>
    <fullName>Sub_Id__c</fullName>
    <label>Sub Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>