ELS Code/main/default/objects/Contact_Sources__c/fields/Submission_last_7_days__c.field-meta.xml
<CustomField>
    <fullName>Submission_last_7_days__c</fullName>
    <formula>if(today()-Add_Date__c &lt;=7, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submission last 7 days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>