ELS Code/main/default/objects/Contact_Sources__c/fields/Tradeshow__c.field-meta.xml
<CustomField>
    <fullName>Tradeshow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tradeshow</label>
    <type>Checkbox</type>
</CustomField>