ELS Code/main/default/objects/Contact_Sources__c/fields/Unique_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Record_ID__c</fullName>
    <formula>Contact_Id__r.FirstName &amp; &quot; &quot; &amp; Contact_Id__r.LastName &amp; &quot;	&quot; &amp; text( Add_Date__c ) &amp; &quot;	&quot; &amp; Activity_Type__c  &amp; &quot;	&quot; &amp;  Source_ID__c</formula>
    <label>Unique_Record_ID</label>
    <type>Text</type>
</CustomField>