ELS Code/main/default/objects/Contact_Sources__c/fields/Web_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Source__c</fullName>
    <description>Only Applicable to Web leads from search climbers and Joomla</description>
    <label>Web Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>