ELS Code/main/default/objects/Contact_Sources__c/fields/What_experience_would_you_like_to_win__c.field-meta.xml
<CustomField>
    <fullName>What_experience_would_you_like_to_win__c</fullName>
    <label>What experience would you like to win?</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>