ELS Code/main/default/objects/Contact_Sources__c/fields/What_s_your_Ideal_Getaway__c.field-meta.xml
<CustomField>
    <fullName>What_s_your_Ideal_Getaway__c</fullName>
    <label>What&apos;s your Ideal Getaway?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>