ELS Code/main/default/objects/Contact_Sources__c/fields/Where_are_you_Interested_in_Camping__c.field-meta.xml
<CustomField>
    <fullName>Where_are_you_Interested_in_Camping__c</fullName>
    <label>Where are you Interested in Camping?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>